github infra/scripts/modules/vpc/ig.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.main.id}"

  tags = {
       Name        = "${var.environment}-vpc"
    Environment = "${var.environment}"
  }
}
